admin/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: mauriciovelez
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: datara.azurecr.io/mauriciovelez-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     cpu: "50m"
          #     memory: "64Mi"
          #   limits:
          #     cpu: "200m"
          #     memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
      imagePullSecrets:
        - name: acr-secret
