admin/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: mauriciovelez
  labels:
    app: admin
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
